--- a/style.css
+++ b/style.css
@@ -6,3 +6,61 @@
 .type {
     font-family: customFonts;
 }
+
+#sidebar {
+    max-width: 30%;
+    max-height: 100%;
+    position: relative;
+    margin-top: -8px;
+    margin-left: -8px;
+    
+}
+
+#splash img {
+    position: relative; 
+    width: 100%;
+    height:100vh;
+    border-radius: 1em;
+}
+
+#sideText img {
+    width: 20%;
+    height: auto;
+    
+}
+
+#sideText {
+    position: absolute;
+    display: flex;
+    font-family: customFonts;
+    font-size: 3rem;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    top: 15rem;
+    text-align: center;
+    /*right: 20px;*/
+    background-color: black;
+    color: white;
+    /*padding-left: 120px;
+    padding-right: 80px;*/
+    background: rgba(0, 0, 0, 0.6);
+    z-index:9999;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+#odinText {
+    align-self: center;
+}
+
+#footer {
+    position: absolute;
+    display: flex;
+    bottom: 1em;
+    color:white;
+    background: rgba(0, 0, 0, 0.6);
+    padding: 5px;
+    left: 40%;
+    
+}
