--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
     font-family: customFonts;
 }
 
+#maincontainer {
+    display:flex;
+}
+
 #sidebar {
     max-width: 30%;
     max-height: 100%;
@@ -57,10 +61,30 @@
 #footer {
     position: absolute;
     display: flex;
-    bottom: 1em;
+    font-family: customFonts;
+    bottom: 0.5em;
     color:white;
     background: rgba(0, 0, 0, 0.6);
     padding: 5px;
-    left: 40%;
+    left: 30%;
     
+}
+
+#footer img {
+    width: 20%;
+    height: auto;
+    margin-right: 10%;
+}
+
+#warnUser {
+    max-width: 70%;
+    margin-left: 0;
+    margin-top: 3rem;
+    font-size: 1.5em;
+    padding: 5%;
+    background-color: rgb(214, 214, 214);
+}
+
+#formS {
+    padding: 5%
 }
